Basic implementation for tests of disconnections in GameModel